AC_INIT([src/AsfPlayer.cpp])
AM_INIT_AUTOMAKE([asf-player], [0.1])
AC_PROG_CXX
AC_OUTPUT([Makefile src/Makefile])

OPENCV_REQUIRED=2.2.0
 
PKG_CHECK_MODULES(OPENCV, [
  opencv >= $OPENCV_REQUIRED
  ], [
  AC_SUBST(OPENCV_CFLAGS)
  AC_SUBST(OPENCV_LIBS)
], [
  AC_MSG_ERROR([
      You need to install or upgrade the OpenCV development
      packages on your system. 
      The minimum version required is $OPENCV_REQUIRED.
  ])
])
